<resources>
    <string name="app_name">RuCafe</string>
    <string name="title">RU Cafe</string>
    <string name="image_button_for_donut_order">Image button for donut order</string>
    <string name="image_button_for_coffee_order">Image button for coffee order</string>
    <string name="showCoffee">Order Coffee</string>
    <string name="showDonuts">Order Donuts</string>
    <string name="currOrder">Current Order</string>
    <string name="prevOrd">Previous Orders</string>
    <string name="coffeeLabel">Order Coffee</string>
    <string name="selectCoffee">Select size:</string>
    <string name="selectAddIn">Select Add-Ins:</string>
    <string name="cream">Cream</string>
    <string name="milk">Milk</string>
    <string name="syrup">Syrup</string>
    <string name="caramel">Caramel</string>
    <string name="whippedCream">Whipped Cream</string>
    <string name="subTotal">Sub Total:</string>
    <string name="orderDonut">Order Donuts</string>
    <string name="selectDonut">Select Donut:</string>
    <string name="quantity">Select Quantity:</string>
    <string name="add">Add to List</string>
    <string name="view">View List</string>
    <string name="subtotal">SubTotal:</string>
    <string name="title_activity_current_order">CurrentOrder</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="addOrder">Add To Order</string>
    <string name="dialogMesg">Confirm order and move to Donuts?</string>
    <string name="dialogMesgDonut">Confirm donut order?</string>
    <string name="dialogTitle">Confirmation</string>
    <string name="positive">Yes</string>
    <string name="negative">No</string>
    <string name="tap_on_order_to_cancel_it" />
    <string name="remove" />
    <string name="tap_on_order_to_remove_it" />
    <string name="remove1">Remove</string>
    <string name="tap_on_the_order_to_cancel">Tap on the Order to cancel</string>
    <string name="order">Order</string>
    <string name="total">Total</string>
    <string name="total_with_text">Total With Text</string>
    <string name="final_amount">Final Amount</string>
    <string name="main_menu">Main Menu</string>
    <string name="tax">Tax</string>

</resources>