<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/scarlet"
    tools:context=".CoffeeActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/coffeeLabel"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="52dp"
        android:text="@string/selectCoffee"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/size_twenty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Spinner
        android:id="@+id/SizeSpinner"
        android:layout_width="152dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="52dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="60dp"
        android:text="@string/selectAddIn"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/size_twenty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <CheckBox
        android:id="@+id/creamCheckBox"
        android:layout_width="128dp"
        android:layout_height="49dp"
        android:layout_marginTop="48dp"
        android:onClick="getTotal"
        android:text="@string/cream"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:buttonTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SizeSpinner" />

    <CheckBox
        android:id="@+id/milkCheckBox"
        android:layout_width="131dp"
        android:layout_height="52dp"
        android:onClick="getTotal"
        android:text="@string/milk"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:buttonTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.607"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creamCheckBox" />

    <CheckBox
        android:id="@+id/syrupCheckBox"
        android:layout_width="132dp"
        android:layout_height="49dp"
        android:layout_marginTop="3dp"
        android:onClick="getTotal"
        android:text="@string/syrup"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:buttonTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/milkCheckBox" />

    <CheckBox
        android:id="@+id/caramelCheckBox"
        android:layout_width="137dp"
        android:layout_height="50dp"
        android:onClick="getTotal"
        android:text="@string/caramel"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:buttonTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.62"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/syrupCheckBox" />

    <CheckBox
        android:id="@+id/wcCheckBox"
        android:layout_width="132dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:onClick="getTotal"
        android:text="@string/whippedCream"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:buttonTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caramelCheckBox" />

    <EditText
        android:id="@+id/totalEditText"
        style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:ems="10"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wcCheckBox"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="128dp"
        android:text="@string/subTotal"
        android:editable="false"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/totalEditText"
        app:layout_constraintHorizontal_bias="0.868"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/coffeeOrderButton"
        android:layout_width="157dp"
        android:layout_height="45dp"
        android:onClick="showDialog"
        android:text="@string/addOrder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wcCheckBox"
        app:layout_constraintVertical_bias="0.745" />

</androidx.constraintlayout.widget.ConstraintLayout>